--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "tinstyle": "^1.0.0",
     "vue": "^3.5.17"
   },
   "devDependencies": {
